refactor: Connect Wallet to database